--- a/src/slides/slides.scss
+++ b/src/slides/slides.scss
@@ -25,6 +25,7 @@
     .carousel-item {
       height: 32rem;
       background-color: #777;
+      width: 73%;
     }
     .carousel-item > img {
       position: absolute;
@@ -32,21 +33,23 @@
       left: 0;
       min-width: 100%;
       height: 32rem;
+      object-fit: cover;
     }
 
     .carousel-inner{
-      width:73%;
+      width:100%;
       float:left;
     }
 
     .slide-info{
-      width: 27%;
-      height:27rem;
-      background:#f2f2f2;
-      float:left;
-      padding:6px;
-      position: relative;
-        top: 5rem;
+      width: 37%;
+      height: 27rem;
+      background: #f2f2f2;
+      float: left;
+      padding: 6px;
+      position: absolute;
+      top: 5rem;
+      left: 100%;
     }
 
     .carousel-control-next, .carousel-control-prev{
